# solidity-mpt

./: .gitignore  LICENSE  Makefile  README.md  foundry.toml  package-lock.json  package.json
.github/workflows/: ci.yml
crates/mpt-bindings/: Cargo.toml
crates/mpt-bindings/src/: erc20.rs  lib.rs  math.rs  mpt_proof.rs  mpt_proof_helper.rs  rlp_reader.rs  strings.rs
crates/mpt-proof-gen/: Cargo.toml
crates/mpt-proof-gen/src/: cli.rs  main.rs
src/: MPTProof.sol
test/: ERC20.sol  MPTProof.t.sol  MPTProofHelper.sol
test/data/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  (+960 more)
