[package]
name = "mpt-proof-gen"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
anyhow = { version = "1.0.56" }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["abigen", "solc-full"] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false, features = ["arbitrary_precision"] }
bytes = "1.3.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
rand = "0.8.5"
rlp = { version = "0.5.2", default-features = false, features = ["std"] }
mpt-bindings = { path = "../mpt-bindings" }
